[project]
name = "emitter-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "albumentations>=2.0.8",
    "h5py>=3.16.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.9",
    "netcdf4>=1.7.4",
    "notebook>=7.5.6",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "openpyxl>=3.1.5",
    "optuna>=4.8.0",
    "pandas>=3.0.2",
    "pyinstaller>=6.20.0",
    "pywavelets>=1.9.0",
    "pyyaml>=6.0.3",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "spectrum>=0.10.0",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "typer>=0.25.1",
    "wandb>=0.26.1",
]
